--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>my first heading</h1>
+    <h2>my second heading</h2>
 <p> i will come if only you permit me to come</p>
   </body>
 </html>
